:sparkles: Add update password route
